Added system rotation.
Each particle system can now be rotated about the X,Y and Z axes.

Rotation controls are in the systems tab.

[Not fully tested yet!]

--- a/Particle Studio.vcproj
+++ b/Particle Studio.vcproj
@@ -48,6 +48,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				DefaultCharIsUnsigned="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="1"
 				DebugInformationFormat="4"
